--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_gauges: ^19.4.42
-
+  reorderable_grid_view: ^2.2.2
+  json_annotation: ^4.0.1
+  build_runner: ^2.0.4
+  json_serializable: ^4.1.3
+  flutter_typeahead: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
