--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  #flutter_svg: ^0.20.0-nullsafety.3
+  flutter_svg: ^0.20.0-nullsafety.3
   flutter:
     sdk: flutter
 
@@ -67,9 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - icons/
-   # - images/korea_v.svg
-  #   - images/a_dot_ham.jpeg
+    - images/korea_1.svg
+    - images/korea_2.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
